--- a/openam-ui/pom.xml
+++ b/openam-ui/pom.xml
@@ -23,6 +23,7 @@
     </parent>
 	<properties>
 		<node.install.directory>${project.basedir}</node.install.directory>
+		<jquery.version>3.7.1</jquery.version>
 	</properties>
 
     <artifactId>openam-ui</artifactId>
@@ -366,14 +367,14 @@
 			              <classifier>min</classifier>
 			              <downloadUrl>https://raw.githubusercontent.com/cloudflare/backgrid-select-all/{version}/{artifactId}.{classifier}.{packaging}</downloadUrl>
 			            </artifactItem>
-			            <artifactItem>
-			              <groupId>org.openidentityplatform.commons.ui.libs</groupId>
-			              <artifactId>jquery</artifactId>
-			              <version>2.1.1</version>
-			              <packaging>js</packaging>
-			              <classifier>min</classifier>
-			              <downloadUrl>https://cdnjs.cloudflare.com/ajax/libs/jquery/{version}/{artifactId}.{classifier}.{packaging}</downloadUrl>
-			            </artifactItem>
+<!--			            <artifactItem>-->
+<!--			              <groupId>org.openidentityplatform.commons.ui.libs</groupId>-->
+<!--			              <artifactId>jquery</artifactId>-->
+<!--			              <version>2.1.1</version>-->
+<!--			              <packaging>js</packaging>-->
+<!--			              <classifier>min</classifier>-->
+<!--			              <downloadUrl>https://cdnjs.cloudflare.com/ajax/libs/jquery/{version}/{artifactId}.{classifier}.{packaging}</downloadUrl>-->
+<!--			            </artifactItem>-->
 			            <artifactItem>
 			              <groupId>org.openidentityplatform.commons.ui.libs</groupId>
 			              <artifactId>lodash</artifactId>
