--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
     <maven.compiler.source>8</maven.compiler.source>
     <!-- Supress checkstyle errors on legacy com.iplanet and com.sun.identity packages -->
     <checkstyleUnitTestSuppressionsLocation>checkstyle/suppressions.xml</checkstyleUnitTestSuppressionsLocation>
-    <opendj.version>4.9.4</opendj.version>
+    <opendj.version>4.9.5-SNAPSHOT</opendj.version>
     <javadoc-utils.version>1.0.0</javadoc-utils.version>
     <ant.contrib.version>1.0b3</ant.contrib.version>
     <guice.version>3.0</guice.version>
@@ -90,7 +90,7 @@
     <commons-beanutils.version>1.11.0</commons-beanutils.version>
     <commons-collections.version>3.2.2</commons-collections.version>
     <commons-digester.version>2.1</commons-digester.version>
-    <commons-fileupload.version>1.5</commons-fileupload.version>
+    <commons-fileupload.version>1.6.0</commons-fileupload.version>
     <commons-lang.version>2.6</commons-lang.version>
     <commons-text.version>1.10.0</commons-text.version>
     <commons-logging.version>1.1.3</commons-logging.version>
@@ -1068,11 +1068,11 @@
         <artifactId>commons-digester</artifactId>
         <version>${commons-digester.version}</version>
       </dependency>
-      <dependency>
-        <groupId>commons-fileupload</groupId>
-        <artifactId>commons-fileupload</artifactId>
-        <version>${commons-fileupload.version}</version>
-      </dependency>
+<!--      <dependency>-->
+<!--        <groupId>commons-fileupload</groupId>-->
+<!--        <artifactId>commons-fileupload</artifactId>-->
+<!--        <version>${commons-fileupload.version}</version>-->
+<!--      </dependency>-->
       <dependency>
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
