--- a/openam-server/pom.xml
+++ b/openam-server/pom.xml
@@ -142,6 +142,23 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.owasp</groupId>-->
+<!--                <artifactId>dependency-check-maven</artifactId>-->
+<!--                <version>12.1.3</version>-->
+<!--                <configuration>-->
+<!--                    <formats>-->
+<!--                        <format>CSV</format>-->
+<!--                    </formats>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>check</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
         </plugins>
     </build>
     <dependencies>
